Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
    ],
    "source": [
     "greenville_population['population'] = 93      \n",
-    "greenville_population     "
+    "gree    "
    ]
   },
   {
