Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "greenville_population = ['population':] = 93      \n",
+    "greenville_population = ['population':93]     \n",
     "population     "
    ]
   },
