Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,8 +106,9 @@
     }
    ],
    "source": [
-    "greenville_population = {'population':93}      \n",
-    "population     "
+    "greenville_population = {'population':93} \n",
+    "\n",
+    "gre    "
    ]
   },
   {
