Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
    "source": [
     "greenville_population = {'population':93} \n",
     "\n",
-    "gre    "
+    "greenville_population     "
    ]
   },
   {
