--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_area = None\n",
+    "greenville_area = {}\n",
     "greenville_area # 68"
    ]
   },
