Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,8 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_area = {'area:'}\n",
-    "greenville_area # 68"
+    "greenville_area = {'area:68'} \n",
+    "greenville_area "
    ]
   },
   {
