--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = {'A'}\n",
+    "city_keys = {'Area' ''}\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
