--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = {'Area' 'City' 'Country' Po}\n",
+    "city_keys = {'Area' 'City' 'Country' 'Population'} \n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
