--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,8 @@
    "outputs": [],
    "source": [
     "city_keys = {'Area' 'City' 'Country' 'Population'} \n",
-    "city_keys # ['Area', 'City', 'Country', 'Population']"
+    "city_keys # ['Area', 'City', 'Country', 'Population']\n",
+    "city"
    ]
   },
   {
