--- a/index.ipynb
+++ b/index.ipynb
@@ -147,13 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AreaCityCountryPopulation'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_keys = {'Area' 'City' 'Country' 'Population'} \n",
     "city_keys # ['Area', 'City', 'Country', 'Population']\n",
-    "city"
+    "city_keys "
    ]
   },
   {
