--- a/index.ipynb
+++ b/index.ipynb
@@ -147,22 +147,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'AreaCityCountryPopulation'}"
+       "{'Area', 'City', 'Country', 'Population'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_keys = {'Area', 'City', 'Country', 'Population'} \n",
+    "city_keys = {'Area', 'City', 'Country', 'Population'}  \n",
     "city_keys # ['Area', 'City', 'Country', 'Population']\n",
     "city_keys "
    ]
