--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_values = {'68', }\n",
+    "city_values = {'68', Greenville}\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
