--- a/index.ipynb
+++ b/index.ipynb
@@ -180,8 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_values = {'68', 'Greenville', 'USA', '93'}\n",
-    "city_values # [68, 'Greenville', 'USA', 93]"
+    "city_values = {'68', 'Greenville', 'USA', '93'} \n",
+    "city_values # [68, 'Greenville', 'USA', 93]\n"
    ]
   },
   {
