--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,8 @@
    "outputs": [],
    "source": [
     "city_values = {'68', 'Greenville', 'USA', '93'} \n",
-    "city_values # [68, 'Greenville', 'USA', 93]\n"
+    "city_values # [68, 'Greenville', 'USA', 93]\n",
+    "city_value "
    ]
   },
   {
