--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "city_values = {68, 'Greenville', 'USA', '93'} \n",
+    "city_values = {68, 'Greenville', 'USA', 93}  \n",
     "city_values # [68, 'Greenville', 'USA', 93]\n",
     "city_value "
    ]
