--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "city_values = {68, 'Greenville', 'USA', 93}  \n",
     "city_values # [68, 'Greenville', 'USA', 93]\n",
-    "city_value  "
+    "city_values   "
    ]
   },
   {
