Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "salina = No\n",
+    "salina = [1]\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
