--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
     }
    ],
    "source": [
-    "salina = [10]\n",
+    "salina = \n",
     "salina \n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
