--- a/index.ipynb
+++ b/index.ipynb
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop[5] = \n",
+    "los_cabos_pop[5] = {}\n",
     "los_cabos_pop # 288"
    ]
   },
