Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -381,8 +381,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop[5] = {2}\n",
-    "los_cabos_pop # 288"
+    "los_cabos_pop[5] = {288} \n",
+    "los_cabos_pop # 288\n"
    ]
   },
   {
