--- a/index.ipynb
+++ b/index.ipynb
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop[5] = {'population'} \n",
+    "los_cabos_pop[5] = {'population':288}  \n",
     "los_cabos_pop # 288\n"
    ]
   },
