--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
    ],
    "source": [
     "los_cabos_pop[5] = {'population':288}  \n",
-    "los_cabos_pop \n"
+    "los_cabos_pop "
    ]
   },
   {
