--- a/index.ipynb
+++ b/index.ipynb
@@ -393,8 +393,8 @@
     }
    ],
    "source": [
-    "los_cabos_pop[5] = {'population':288}  \n",
-    "los_cabos_pop "
+    "los_cabos_pop = {'population':288}  \n",
+    "los_cabos_pop  "
    ]
   },
   {
