--- a/index.ipynb
+++ b/index.ipynb
@@ -405,11 +405,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Greenville', 'Country': 'USA', 'Population': 93, 'Area': 68}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cities"
+    "cities[5] "
    ]
   },
   {
