Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,22 +405,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Greenville', 'Country': 'USA', 'Population': 93, 'Area': 68}"
+       "{'City': 'Archipelago Sea',\n",
+       " 'Country': 'Finland',\n",
+       " 'Population': 60,\n",
+       " 'Area': 2000}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[5] "
+    "cities[6]  "
    ]
   },
   {
