--- a/index.ipynb
+++ b/index.ipynb
@@ -434,8 +434,8 @@
    },
    "outputs": [],
    "source": [
-    "city_count = \n",
-    "city_count # 12"
+    "city_count = {12} \n",
+    "city_count # 12\n"
    ]
   },
   {
