--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,8 @@
    "outputs": [],
    "source": [
     "city_count = {12} \n",
-    "city_count # 12\n"
+    "city_count # 12\n",
+    "city_count "
    ]
   },
   {
