--- a/index.ipynb
+++ b/index.ipynb
@@ -462,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = ['Pyeon']\n",
+    "cities[7]['City'] = ['PyeongChan']\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
