Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -463,7 +463,7 @@
    "outputs": [],
    "source": [
     "cities[7]['City'] = ['PyeongChang'] \n",
-    "cities[7]['City'] # 'PyeongChang'"
+    "cities[7]['City'] # 'PyeongChang'\n"
    ]
   },
   {
