--- a/index.ipynb
+++ b/index.ipynb
@@ -463,7 +463,8 @@
    "outputs": [],
    "source": [
     "cities[7]['City'] = ['PyeongChang'] \n",
-    "cities[7]['City'] # 'PyeongChang'\n"
+    "cities[7]['City'] # 'PyeongChang'\n",
+    "cities[7]"
    ]
   },
   {
