Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,7 +464,7 @@
    "source": [
     "cities[7]['City'] = ['PyeongChang'] \n",
     "cities[7]['City'] # 'PyeongChang'\n",
-    "cities[7]"
+    "cities[7][]"
    ]
   },
   {
