Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
     }
    ],
    "source": [
-    "cities[7]['City'] = ['PyeongChang'\n",
+    "cities[7]['City'] = {'PyeongChang'}\n",
     "cities[7]['City'] # 'PyeongChang'\n",
     "cities[7]['city'] "
    ]
