--- a/index.ipynb
+++ b/index.ipynb
@@ -490,14 +490,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PyeongChang', 'South Korea', 44, 1464]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyeongchang_values = ['PyeongChang', 'South Korea', 44, 1464] \n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]\n",
-    "pyeongchang_values"
+    "pyeongchang_values "
    ]
   },
   {
