Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -544,7 +544,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = \n",
+    "pyeongchang_keys = ['City', 'Country', 'Population', 'Area']\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
