--- a/index.ipynb
+++ b/index.ipynb
@@ -540,13 +540,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['City', 'Country', 'Population', 'Area']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyeongchang_keys = ['City', 'Country', 'Population', 'Area']\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
+    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
+    "pyeongchang_keys "
    ]
   },
   {
