Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -555,7 +555,8 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = ['City', 'Country', 'Population', 'Area']\n",
+    "pyeongchang_keys = ['City', \n",
+    "                    'Country', 'Population', 'Area']\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
     "pyeongchang_keys "
