Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -556,7 +556,9 @@
    ],
    "source": [
     "pyeongchang_keys = ['City', \n",
-    "                    'Country', 'Population', 'Area']\n",
+    "                    'Country', \n",
+    "                    'Population', \n",
+    "                    'Area']\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
     "pyeongchang_keys "
