--- a/index.ipynb
+++ b/index.ipynb
@@ -567,11 +567,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "type(pyeongchang_keys) # list"
+    "type(pyeongchang_keys) # list "
    ]
   },
   {
