--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "greenville_population = \n",
+    "greenville_population = greenville[]\n",
     "\n",
     "greenville_population     "
    ]
