--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "greenville_population = greenville['Population'] # change\n",
+    "greenville_population = greenville['Population'] # change None \n",
     "\n",
     "greenville_population     "
    ]
