--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "greenville_population = greenville['Population'] # change None \n",
     "\n",
-    "greenville_population     "
+    "greenville_population # 93      "
    ]
   },
   {
