Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,8 @@
    "source": [
     "greenville_population = greenville['Population'] # change None \n",
     "\n",
-    "greenville_population # 93      "
+    "greenville_population # 93      \n",
+    "\n"
    ]
   },
   {
