--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,8 @@
     "greenville_population = greenville['Population'] # change None \n",
     "\n",
     "greenville_population # 93      \n",
-    "\n"
+    "\n",
+    "greenville"
    ]
   },
   {
