--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "greenville_population = greenville['Population'] # change None       \n",
+    "greenville_population = greenville['Population'] 93        \n",
     "\n",
     "greenville_population  "
    ]
